# crabouncer

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IAM_MVP.md  PRODUCT.md  README.md  compose.yaml
config/: app.example.toml  docker.toml
core/: Cargo.toml  README.md
core/migrations/: 0001_initial.sql  0002_resource_sync.sql  0003_authzen_search.sql  0004_groups.sql  0005_application_roles.sql
core/src/: api.rs  authzen.rs  config.rs  error.rs  iam.rs  main.rs  management.rs  oidc.rs  policy.rs  security.rs
core/src/api/: applications.rs  authzen.rs  cedar.rs  management.rs  mod.rs  oidc.rs  organizations.rs  resource_sync.rs  users.rs
core/src/api/authzen/: evaluations.rs  metadata.rs  search.rs
core/src/api/management/: access.rs  applications.rs  groups.rs  logs.rs  organizations.rs  policies.rs  roles.rs  sessions.rs  validation.rs
core/src/api/oidc/: authorization.rs  metadata.rs  sessions.rs  tokens.rs
core/src/authorization/: mod.rs
core/src/db/: applications.rs  audit.rs  authzen.rs  bootstrap.rs  groups.rs  mod.rs  oidc.rs  policies.rs  resources.rs  roles.rs  sessions.rs  tenants.rs
core/src/identity/: password.rs
core/src/infra/: config.rs  database.rs
core/src/management/: access.rs  applications.rs  logs.rs  organizations.rs  policies.rs  sessions.rs  validation.rs
core/src/oidc/: mod.rs
core/src/session/: cookie.rs  mod.rs  service.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sdk/: Cargo.toml  README.md
sdk/src/: lib.rs
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
