[package]
name = "crabouncer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
cedar-policy = "4"
cookie = "0.18"
jsonwebtoken = "9"
rand = "0.9"
rsa = { version = "0.9", features = ["pem"] }
protocol = { path = "../protocol", package = "crabouncer-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
time.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
url = "2"
