[package]
name = "crabouncer-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol", package = "crabouncer-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync", "time"] }
